--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="container">
         <h2 class="logo">GoodBrowserGames</h2>
         <nav>
-          <a href="./pages/login.html"><i class="fas fa-user"></i></a>
-          <a href="#"><i class="fas fa-search"></i></a>
+          <a id="login-btn" href="./pages/login.html"><i class="fas fa-user"></i></a>
+          <a id="search-btn" href="#"><i class="fas fa-search"></i></a>
         </nav>
       </div>
     </header>
