--- a/pages/login.html
+++ b/pages/login.html
@@ -21,7 +21,7 @@
       <div class="container">
         <h2 class="logo">GoodBrowserGames</h2>
         <nav>
-          <a href="../index.html"><i class="fas fa-home"></i></a>
+          <a id="home-btn" href="../index.html"><i class="fas fa-home"></i></a>
         </nav>
       </div>
     </header>
